# RAG

./: .env  main.py  pyproject.toml
notebook/: document.ipynb  page.ipynb  pdf.ipynb
